--- a/index.html
+++ b/index.html
@@ -7,7 +7,28 @@
     <title>dentalcare-stom-tum</title>
   </head>
   <body>
-    <div id="app"></div>
-    <script type="module" src="/src/main.js"></script>
+    <header class="header">
+      <div class="container">
+        <div class="header__content">
+          <button class="header__phoneBtn">
+            <img src="./src/assets/svg/phone.svg" alt="Телефон">
+          </button>
+          <div class="fringe">
+            <img src="./src/assets/svg/fringe.svg" alt="Челка" class="fringe__svg">
+            <img src="./src/assets/svg/logo.svg" alt="Ультра-Дент стоматология" class="fringe__logo">
+          </div>
+        </div>
+      </div>
+    </header>
+    
+
+
+
+
+
+
+
+
+    <script type="module" src="./src/main.js"></script>
   </body>
 </html>
