--- a/index.html
+++ b/index.html
@@ -16,13 +16,60 @@
               <div class="header__address_mark"></div>
               <p class="header__address_text">ул. Широтная д. 108 к4</p>
               <button class="header__address_btn"></button>
+              <div class="header__address_list">
+                <button class="header__address_item">
+                  Широтная, д. 108 к4
+                </button>
+                <button class="header__address_item">
+                  Республики, д. 14/7
+                </button>
+                <button class="header__address_item">
+                  Чедюскинцев, д. 29
+                </button>
+              </div>
             </div>
           </div>
           <div class="roundedSquare_left"></div>
           <div class="roundedSquare_right"></div>
           <button class="header__phoneBtn"></button>
           <div class="fringe">
-            <img src="./src/assets/svg/logo.svg" alt="Ультра-Дент стоматология" class="fringe__logo">
+            <a href="#" class="fringe__logo">
+              <img src="./src/assets/svg/logo.svg" alt="Ультра-Дент стоматология" class="fringe__logo_svg">
+            </a>
+            <nav class="header__nav">
+              <ul class="header__nav_list">
+                <li class="header__nav_item">
+                  <button class="header__nav_btnLeft">
+                    Услуги
+                  </button>
+                </li>
+                <li class="header__nav_item">
+                  <button class="header__nav_btn">
+                    Отзывы
+                  </button>
+                </li>
+                <li class="header__nav_item">
+                  <button class="header__nav_btn">
+                    Цены
+                  </button>
+                </li>
+                <li class="header__nav_item">
+                  <button class="header__nav_btn">
+                    Специалисты
+                  </button>
+                </li>
+                <li class="header__nav_item">
+                  <button class="header__nav_btn">
+                    FAQ
+                  </button>
+                </li>
+                <li class="header__nav_item">
+                  <button class="header__nav_btnRight">
+                    Контакты
+                  </button>
+                </li>
+              </ul>
+            </nav>
           </div>
           <button class="header__menuBtn"></button>
           <div class="header__application">
