--- a/index.html
+++ b/index.html
@@ -177,6 +177,126 @@
         </div>
       </div>
     </header>
+    <div class="main">
+      <div class="container">
+        <div class="main__content">
+          <div class="main__widget1">
+            <div class="widget1__slogan">
+              <div class="widget1__slogan_main">
+                <p class="widget1__slogan_text1">Имплантация </p>
+                <p class="widget1__slogan_text2">всей челюсти в Тюмени</p>
+              </div>
+              <div class="widget1__help">
+                <p class="widget1__help_text1">Поможем в самых сложных случаях</p>
+                <div class="widget1__help_list">
+                  <div class="widget1__help_item">
+                    <div class="widget1__help_radio"></div>
+                    <p class="widget1__help_text2">При сильной атрофии</p>
+                  </div>
+                  <div class="widget1__help_item">
+                    <div class="widget1__help_radio"></div>
+                    <p class="widget1__help_text2">При диабете</p>
+                  </div>
+                  <div class="widget1__help_item">
+                    <div class="widget1__help_radio"></div>
+                    <p class="widget1__help_text2">При пародонтозе</p>
+                  </div>
+                  <div class="widget1__help_item">
+                    <div class="widget1__help_radio"></div>
+                    <p class="widget1__help_text2">При остеопорозе</p>
+                  </div>
+                </div>
+              </div>
+            <div class="widget1__skull">
+              <div class="widget1__skull_component1">
+                  <div class="widget1__skull_teeth"></div>
+                  <p class="widget1__skull_text">на 6-ти имлантах</p>
+                </div>
+                <div class="widget1__skull_component2">
+                  <p class="widget1__skull_text">на 4-х имлантах</p>
+                  <div class="widget1__skull_teeth"></div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="main__widget2">
+            <button class="main__widget2_phoneBtn">
+              <div class="main__widget2_phoneIcon"></div>
+            </button>
+            <div class="widget2__sale">
+              <div class="widget2__sale_implant"></div>
+              <div class="widget2__sale_textContainer1">
+                <p class="widget2__sale_text1-big">5 055 ₽</p>
+                <p class="widget2__sale_text1-small">в месяц</p>
+              </div>
+              <div class="widget2__sale_textContainer2">
+                <p class="widget2__sale_text2">91 000 ₽ за все зубы</p>
+                <p class="widget2__sale_text2-opacity">вместо 140 000₽</p>
+              </div>
+              <div class="widget2__sale_application">
+                <button class="widget2__sale_btn">
+                  <div class="widget2__sale_btnIcon"></div>
+                  Записаться по акции
+                </button>
+                <p class="widget2__sale_application-text">Акция до <br>30 сентября</p>
+              </div>
+            </div>
+            <div class="widget2__phone">
+              <p class="widget2__phone_text1">или звоните по номеру:</p>
+              <p class="widget2__phone_text2">+7  / 3452 /  60 - 82 - 47</p>
+            </div>
+            <div class="widget2__stoke">
+              <p class="widget2__stoke_text1">В стоимость акции входят:</p>
+              <div class="widget2__stoke_list">
+                <div class="widget2__stoke_item">
+                  <div class="widget1__help_radio"></div>
+                  <p class="widget1__help_text2">3D-диагностика</p>
+                </div>
+                <div class="widget2__stoke_item">
+                  <div class="widget1__help_radio"></div>
+                  <p class="widget1__help_text2">4 импланта с установкой</p>
+                </div>
+                <div class="widget2__stoke_item">
+                  <div class="widget1__help_radio"></div>
+                  <p class="widget1__help_text2">Несъёмный протез сразу</p>
+                </div>
+                <div class="widget2__stoke_item">
+                  <div class="widget1__help_radio"></div>
+                  <p class="widget1__help_text2">Работа врачей</p>
+                </div>
+                <div class="widget2__stoke_item">
+                  <div class="widget1__help_radio"></div>
+                  <p class="widget1__help_text2">Все материалы и анестезия</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="main__widget3">
+            <div class="widget3__video"></div>
+            <div class="widget3__slogan">
+              <div class="widget3__slogan_statue">
+                <div class="widget3__slogan_statueUp"></div>
+                <div class="widget3__slogan_rayStatue"></div>
+              </div>
+              <p class="widget3__slogan_text">
+                Ведут прием только опытные терапевты, ортодонты и хирурги, в том числе врачи 
+                <span class="widget3__slogan_text-bold">
+                  высшей категории
+                </span> 
+                и 
+                <span class="widget3__slogan_text-bold">
+                  кандидаты наук.
+                </span>
+              </p>
+            </div>
+          </div>
+          <button class="main__applicationBtn">
+            Получить расчёт стоимости
+            <div class="main__applicationBtn_icon"></div>
+          </button>
+        </div>
+      </div>
+    </div>
     
     
 
