--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>dentalcare-stom-tum</title>
   </head>
@@ -297,6 +297,63 @@
         </div>
       </div>
     </div>
+    <div class="help">
+        <div class="container">
+            <div class="help__content">
+                <div class="help__title">
+                    <div class="help__title_textContainer">
+                        <p class="help__title_text1-lightGreen">Пока другие клиники отказывают </p>
+                        <p class="help__title_text1-darkGreen">Мы помогаем </p>
+                    </div>
+                    <p class="help__title_text2">за счёт уникального Швейцарского метода</p>
+                </div>
+                <div class="help__items">
+                    <div class="help__item">
+                        <div class="help__item_icon1"></div>
+                        <div class="help__item_textContainer">
+                            <p class="help__item_text-title">Без костной пластики</p>
+                            <p class="help__item_text-description">Особые импланты вживляем в участки,  которые не подвержены атрофии</p>
+                        </div>
+                    </div>
+                    <div class="help__item">
+                        <div class="help__item_icon2"></div>
+                        <div class="help__item_textContainer">
+                            <p class="help__item_text-title">Сразу с удобным протезом</p>
+                            <p class="help__item_text-description">установка по форме зубной дуги для жизни без натираний и расшатываний</p>
+                        </div>
+                    </div>
+                    <div class="help__item">
+                        <div class="help__item_icon3"></div>
+                        <div class="help__item_textContainer">
+                            <p class="help__item_text-title">При самых сложных случаях</p>
+                            <p class="help__item_text-description">метод имеет наименьшую долю отторжений имплантов в 85+ патологиях</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="help__certificate">
+                    <div class="help__certificate_container">
+                        <div class="help__certificate_item"></div>
+                        <div class="help_certificate_widget">
+                            <div class="help__certificate_title">
+                                <div class="help__certificate_star">
+                                    <div class="help__certificate_starUp"></div>
+                                    <div class="help__certificate_rayStar"></div>
+                                </div>
+                            </div>
+                            <p class="help__certificate_text">
+                                <span class="help__certificate_text-bold">Первая в России</span>
+                                 сеть стоматологий с сертификатом
+                                <span class="help__certificate_text-bold">независимого</span>
+                                агентства экспертизы и консалтинга
+                                «Мед Эксперт Консалт»
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
     
     
 
