--- a/index.html
+++ b/index.html
@@ -983,19 +983,12 @@
                         </p>
                     </div>
                 </div>
+                <div class="footer__fringe">
+                    <a href="#" class="footer__fringe_link"></a>
+                </div>
             </div>
         </div>
     </div>
-
-    
-    
-
-
-
-
-
-
-
 
     <script type="module" src="./src/main.js"></script>
   </body>
