--- a/index.html
+++ b/index.html
@@ -1265,7 +1265,9 @@
     <div class="footer">
         <div class="container">
             <div class="footer__content">
-                <div class="footer__map"></div>
+                <div class="footer__map">
+                  <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A283bddd2f02443b9420425a3f9fc2a6d9987867ca219bb4022d470f47cffd3b5&amp;width=100%&amp;height=100%&amp;lang=ru_RU&amp;scroll=true"></script>
+                </div>
                 <div class="footer__main">
                     <div class="footer__feedback">
                         <div class="footer__feedback_btns">
