--- a/index.html
+++ b/index.html
@@ -10,13 +10,24 @@
     <header class="header">
       <div class="header__container">
         <div class="header__mobileMenu">
-          <div class="header__mobileMenu_address">
-            <div class="header__address_openList-btn">
-                <div class="header__address_mark"></div>
-                <p class="header__address_text">ул. Широтная д. 108 к4</p>
-                <button class="header__address_btn"></button>
-              </div>
-          </div>
+            <div class="header__address_points">
+                <div class="header__address_openList-btn">
+                    <div class="header__address_mark"></div>
+                    <p class="header__address_text">ул. Широтная д. 108 к4</p>
+                    <button class="header__address_btn"></button>
+                </div>
+                <div class="header__address_list">
+                    <button class="header__address_item">
+                        Широтная, д. 108 к4
+                    </button>
+                    <button class="header__address_item">
+                        Республики, д. 14/7
+                    </button>
+                    <button class="header__address_item">
+                        Чедюскинцев, д. 29
+                    </button>
+                </div>
+            </div>
           <div class="header__mobileMenu_nav">
             <ul class="header__mobileMenu_nav-list">
                 <li class="header__mobileMenu_nav-item">
