--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
             </div>
           </div>
           <div class="main__widget3">
-            <div class="widget3__video"></div>
+            <video id="mainVideo" src="./src/assets/videos/IMG_9044.MP4" controls></video>
             <div class="widget3__slogan">
               <div class="widget3__slogan_statue">
                 <div class="widget3__slogan_statueUp"></div>
@@ -537,7 +537,7 @@
                                     <div class="main-item__patient">
                                         <div class="main-item__block1">
                                             <p class="main-item__block1_text1">Отзыв пациента </p>
-                                            <p class="main-item__block1_text2">Алексей В., 52 года</p>
+                                            <p class="main-item__block1_text2">Марина Г., 42 года</p>
                                         </div>
                                         <div class="main-item__block2">
                                             <p class="main-item__block2_text">это был мой последний шанс - и только врачи «УЛЬТРА-ДЕНТ» мне помогли</p>
@@ -608,7 +608,10 @@
                                             </div>
                                         </div>
                                         <div class="main-item__case_youtube"></div>
-                                        <div class="main-item__case_view"></div>
+                                        <div class="main-item__case_view">
+                                            <video id="reviewVideo" src="src/assets/videos/review1_Video.mp4" controls></video>
+                                            <div class="openVideo"></div>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
