--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
               </div>
               <div class="widget2__sale_application">
                 <button class="widget2__sale_btn">
-                  <div class="widget2__sale_btnIcon"></div>
+                  <div><img src="./src/assets/svg/steps/thunder.svg" alt=""></div>
                   Записаться по акции
                 </button>
                 <p class="widget2__sale_application-text">Акция до <br>30 сентября</p>
@@ -398,8 +398,8 @@
                                             <div class="review__star_yellow"></div>
                                             <div class="review__star_yellow"></div>
                                             <div class="review__star_yellow"></div>
-                                            <div class="review__star_empty"></div>
-                                            <p class="doctors-card__review_estimation-text">4.0</p>
+                                            <div class="review__star_half"></div>
+                                            <p class="doctors-card__review_estimation-text">4.8</p>
                                         </div>
                                         <div class="doctors-card__review_company"></div>
                                     </div>
@@ -411,7 +411,7 @@
                                     <p class="doctors-card__experience_text-bold">+15 лет</p>
                                 </div>
                                 <div class="doctors-card__information">
-                                    <div class="doctors-card__name">
+                                     <div class="doctors-card__name">
                                         <p class="doctors-card__name_firstname">Седельников</p>
                                         <p class="doctors-card__name_lastname">Никита Борисович</p>
                                         <p class="doctors-card__name_qualification">Хирург-имплантолог</p>
@@ -425,8 +425,8 @@
                                             <div class="review__star_yellow"></div>
                                             <div class="review__star_yellow"></div>
                                             <div class="review__star_yellow"></div>
-                                            <div class="review__star_empty"></div>
-                                            <p class="doctors-card__review_estimation-text">4.0</p>
+                                            <div class="review__star_half"></div>
+                                            <p class="doctors-card__review_estimation-text">4.8</p>
                                         </div>
                                         <div class="doctors-card__review_company"></div>
                                     </div>
@@ -452,8 +452,8 @@
                                             <div class="review__star_yellow"></div>
                                             <div class="review__star_yellow"></div>
                                             <div class="review__star_yellow"></div>
-                                            <div class="review__star_empty"></div>
-                                            <p class="doctors-card__review_estimation-text">4.0</p>
+                                            <div class="review__star_half"></div>
+                                            <p class="doctors-card__review_estimation-text">4.8</p>
                                         </div>
                                         <div class="doctors-card__review_company"></div>
                                     </div>
@@ -1270,6 +1270,16 @@
               <div class="message__btn-close--img"></div>
               <div class="message__btn-close--img"></div>
               <div class="message__btn-close--img"></div>
+          </button>
+      </div>
+    </div>
+
+    <div class="backblur backblur2">
+      <div class="opinion">
+        <button class="opinion__btn-close">
+              <div class="opinion__btn-close--img"></div>
+              <div class="opinion__btn-close--img"></div>
+              <div class="opinion__btn-close--img"></div>
           </button>
       </div>
     </div>
