--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <div class="header__address_points">
                 <div class="header__address_openList-btn">
                     <div class="header__address_mark"></div>
-                    <p class="header__address_text">ул. Широтная д. 108 к4</p>
+                    <p class="header__address_text">ул. Широтная, д. 108 к4</p>
                     <button class="header__address_btn"></button>
                 </div>
                 <div class="header__address_list">
@@ -41,13 +41,13 @@
                   </button>
                 </li>
                 <li class="header__mobileMenu_nav-item">
-                  <button class="header__mobileMenu_nav-btn" id="mobile_nav-prices">
-                    Цены
+                  <button class="header__mobileMenu_nav-btn" id="mobile_nav-specialists">
+                    Специалисты
                   </button>
                 </li>
                 <li class="header__mobileMenu_nav-item">
-                  <button class="header__mobileMenu_nav-btn" id="mobile_nav-specialists">
-                    Специалисты
+                  <button class="header__mobileMenu_nav-btn" id="mobile_nav-prices">
+                    Цены
                   </button>
                 </li>
                 <li class="header__mobileMenu_nav-item">
@@ -69,7 +69,7 @@
             </button>
             <div class="header__block_times">
               <div class="header__mobileMenu_application-time"></div>
-              <p class="header__mobileMenu_application-text">ежедневно с 9-00 до 21-00</p>
+              <p class="header__mobileMenu_application-text">Ежедневно с 9-00 до 21-00</p>
             </div>
             <ul class="header__mobileMenu_application-links">
               <li class="header__block_item">
@@ -96,7 +96,7 @@
             <div class="header__address_points">
               <div class="header__address_openList-btn">
                 <div class="header__address_mark"></div>
-                <p class="header__address_text">ул. Широтная д. 108 к4</p>
+                <p class="header__address_text">ул. Широтная, д. 108 к4</p>
                 <button class="header__address_btn"></button>
               </div>
               <div class="header__address_list">
@@ -178,7 +178,7 @@
               </ul>
               <div class="header__block_times">
                 <div class="header__block_time"></div>
-                <p class="header__block_text">ежедневно с 9-00 до 21-00</p>
+                <p class="header__block_text">Ежедневно с 9-00 до 21-00</p>
               </div>
             </div>
           </div>
@@ -282,7 +282,7 @@
             </div>
           </div>
           <div class="main__widget3">
-            <video id="mainVideo" src="./src/assets/videos/IMG_9044.MP4" controls></video>
+            <video id="mainVideo" src="./src/assets/videos/mainVideo.mp4" controls></video>
             <div class="widget3__slogan">
               <div class="widget3__slogan_statue">
                 <div class="widget3__slogan_statueUp"></div>
@@ -618,10 +618,10 @@
                             </div>
                             <div class="reviews-main__item">
                                 <div class="main-item">
-                                    <div class="main-item__patient">
+                                    <div class="main-item__patient main-item__patient2">
                                         <div class="main-item__block1">
                                             <p class="main-item__block1_text1">Отзыв пациента </p>
-                                            <p class="main-item__block1_text2">Алексей В., 52 года</p>
+                                            <p class="main-item__block1_text2">Арамиль В., 52 года</p>
                                         </div>
                                         <div class="main-item__block2">
                                             <p class="main-item__block2_text">это был мой последний шанс - и только врачи «УЛЬТРА-ДЕНТ» мне помогли</p>
@@ -689,7 +689,7 @@
                                         </div>
                                         <div class="main-item__case_youtube"></div>
                                         <div class="main-item__case_view">
-                                            <video class="reviewVideo" src="src/assets/videos/review1_Video.mp4" controls></video>
+                                            <video class="reviewVideo" src="src/assets/videos/review2_Video.mp4" controls></video>
                                             <div class="openVideo"></div>
                                         </div>
                                     </div>
@@ -1167,6 +1167,7 @@
         <div class="patquest__content">
           <div class="patquest__mainBlock">
             <div class="patquest__mainBlock--item">
+
               <div class="patquest__message-window">
                 <div class="patquest__message-window--question">
                   <div class="patquest__message-window--question--avatar"></div>
@@ -1177,30 +1178,33 @@
                   <img src="./src/assets/svg/patquest/shape.svg" alt="" class="patquest__message-window--question--img">
                 </div>
               </div>
+
               <h2 class="patquest__title"><span class="patquest__title_white">Частые вопросы</span><br><span class="patquest__title_green">Наших пациентов</span></h2>
+              
               <div class="patquest__message-window">
                 <div class="patquest__message-window--question">
                   <div class="patquest__message-window--question--avatar"></div>
                   <div class="patquest__message-window--questions">
                     <div class="patquest__message-window--question--text patquest__message-window--question--text_borderBottom">А это больно?</div>
-                    <div class="patquest__message-window--question--text patquest__message-window--question--text_borderTop">А если будет больно как в прошлый раз?</div>
+                    <div class="patquest__message-window--question--text patquest__message-window--question--text_borderTop">В другой клинике процедура была болезненной </div>
                   </div>
                 </div>
                 <div class="patquest__message-window--answer">
                   <div class="patquest__message-window--answers">
-                    <div class="patquest__message-window--answer--text patquest__message-window--answer--text_borderBottom"> Не волнуйтесь!<br>Мы слышавли это сотни раз!</div>
-                    <div class="patquest__message-window--answer--text patquest__message-window--answer--text_borderTop">И всегда находили решение!</div>
+                    <div class="patquest__message-window--answer--text patquest__message-window--answer--text_borderBottom"> Не волнуйтесь!<br>Нам знакомы Ваши переживания.</div>
+                    <div class="patquest__message-window--answer--text patquest__message-window--answer--text_borderTop">Наши лучшие специалисты используют несколько подходов к обезболиванию и снижению тревожности </div>
                   </div>
                   <img src="./src/assets/svg/patquest/shape.svg" alt="" class="patquest__message-window--question--img">
                 </div>
               </div>
+
               <div class="patquest__message-window">
                 <div class="patquest__message-window--question">
                   <div class="patquest__message-window--question--avatar"></div>
-                  <div class="patquest__message-window--question--text">У меня диабет - это опасно?</div>
+                  <div class="patquest__message-window--question--text">У меня диабет. Мне можно делать имплантацию? </div>
                 </div>
                 <div class="patquest__message-window--answer">
-                  <div class="patquest__message-window--answer--text">Нет. при компенсации уровня сахара
+                  <div class="patquest__message-window--answer--text">Да. При компенсации уровня сахара можно
 всё приживается</div>
                   <img src="./src/assets/svg/patquest/shape.svg" alt="" class="patquest__message-window--question--img">
                 </div>
@@ -1212,14 +1216,15 @@
               <div class="patquest__message-window">
                 <div class="patquest__message-window--question">
                   <div class="patquest__message-window--question--avatar"></div>
-                  <div class="patquest__message-window--question--text">Мне 65, не поздно ли?</div>
+                  <div class="patquest__message-window--question--text">Мне 65 лет. Не поздно ли делать имплантацию? </div>
                 </div>
                 <div class="patquest__message-window--answer">
-                  <div class="patquest__message-window--answer--text">Не поздно.<br>Мы ставили импланты и в  75 лет</div>
+                  <div class="patquest__message-window--answer--text">Не поздно.<br>Мы ставили импланты и в 75 лет</div>
                   <img src="./src/assets/svg/patquest/shape.svg" alt="" class="patquest__message-window--question--img">
                 </div>
               </div>
             </div>
+
           </div>
         </div>
       </div>
@@ -1233,9 +1238,8 @@
               <span class="galery__title--text_whiteGreen">Добро пожаловать в нашу уникальную</span>
               <span class="galery__title--text_darkGreen">Соляную комнату!</span>
             </h2>
-            <p class="galery__title--p">Честная стоимость</p>
             <p class="galery__title--p2">
-             В стремлении предоставить нашим пациентам максимально комфортные и полезные условия, наша стоматология предлагает возможность посетить <b>СОЛЯНУЮ КОМНАТУ</b> — пространство, созданное для релаксации и укрепления здоровья.
+             В стремлении предоставить нашим пациентам максимально комфортные и полезные условия наша стоматология предлагает возможность посетить <b>СОЛЯНУЮ КОМНАТУ</b> — пространство, созданное для релаксации и укрепления здоровья
             </p>
           </div>
           <div class="galery__imgs">
@@ -1261,7 +1265,7 @@
             <div class="faq__img"></div>
             <button class="faq__btn btnBlueAnimate">Получить расчёт стоимости<div class="main__applicationBtn_icon"><img src="./src/assets/svg/btns/arrow_right.svg" alt=""></div></button>
             <div class="faq__number">
-              <p class="faq__number--text">Или позвоните, что бы задать любой вопрос</p>
+              <p class="faq__number--text">Или позвоните, чтобы задать любой вопрос</p>
               <a href="tel:+734522425241">
                 <p class="faq__number--num"><img src="./src/assets/svg/faq/call.svg" alt="">+7 (3452) 242-52-41</p>
               </a>
@@ -1314,12 +1318,12 @@
                         </div>
                         <div class="footer__feedback_time">
                             <div class="header__block_time"></div>
-                            <p class="header__block_text">ежедневно с 9-00 до 21-00</p>
+                            <p class="header__block_text">Ежедневно с 9-00 до 21-00</p>
                         </div>
                         <div class="footer__feedback_addresses">
                             <p class="footer__feedback_addresses-item">Республики, д. 14/7</p>
                             <p class="footer__feedback_addresses-item">Челюскинцев, д. 29</p>
-                            <p class="footer__feedback_addresses-item">Широтная д. 108 к4</p>
+                            <p class="footer__feedback_addresses-item">Широтная, д. 108 к4</p>
                         </div>
                     </div>
                     <div class="footer__nav">
@@ -1363,10 +1367,9 @@
                     </div>
                     <div class="footer__license">
                         <p class="footer__license_text">
-                            Лицензия: ЛО41-01107-72/00328639 от 21.08.2020 г.,
-                            выдана Департаментом здравоохранения Тюменской области.
-                            <br>ОБЩЕСТВО С ОГРАНИЧЕННОЙ ОТВЕТСТВЕННОСТЬЮ "ФИЛАТОВСКАЯ КЛИНИКА"
-                            <br>625062, Тюменская область, город Тюмень, ул. Николая Зелинского, д. 5 к. 2/1
+                            Лицензия: № Л041-01107-72/00328410 от 16.11.2017 г. Выдана Департаментом здравоохранения Тюменской области. 
+                            <br>Общество с ограниченной ответственностью "Ультра-Дент".
+                            <br>625000, Россия, Тюменская область, г. Тюмень, ул. Челюскинцев, д. 29 
                         </p>
                         <p class="footer__license_text-light">
                             Обращаем ваше внимание, что цены на сайте могут отличаться от цен в Клинике и не являются публичной офертой согласно ст. 437 (2) ГК РФ.
@@ -1376,7 +1379,7 @@
                     </div>
                     <div class="footer__warning">
                         <p class="footer__warning_text">
-                            ИМЕЮТСЯ ПРОТИВОПОКАЗАНИЯ НЕОБХОДИМА КОНСУЛЬТАЦИЯ СПЕЦИАЛИСТА
+                            ИМЕЮТСЯ ПРОТИВОПОКАЗАНИЯ. НЕОБХОДИМА КОНСУЛЬТАЦИЯ СПЕЦИАЛИСТА
                         </p>
                     </div>
                 </div>
