--- a/index.html
+++ b/index.html
@@ -36,18 +36,18 @@
                   </button>
                 </li>
                 <li class="header__mobileMenu_nav-item">
-                  <button class="header__mobileMenu_nav-btn" id="mobile_nav-reviews">
-                    Отзывы
-                  </button>
-                </li>
-                <li class="header__mobileMenu_nav-item">
                   <button class="header__mobileMenu_nav-btn" id="mobile_nav-specialists">
                     Специалисты
                   </button>
                 </li>
                 <li class="header__mobileMenu_nav-item">
+                  <button class="header__mobileMenu_nav-btn" id="mobile_nav-reviews">
+                    Отзывы
+                  </button>
+                </li>
+                <li class="header__mobileMenu_nav-item">
                   <button class="header__mobileMenu_nav-btn" id="mobile_nav-prices">
-                    Цены
+                    Стоимость
                   </button>
                 </li>
                 <li class="header__mobileMenu_nav-item">
@@ -126,18 +126,18 @@
                   </button>
                 </li>
                 <li class="header__nav_item">
+                  <button class="header__nav_btn" id="header_nav-specialists">
+                    Специалисты
+                  </button>
+                </li>
+                <li class="header__nav_item">
                   <button class="header__nav_btn" id="header_nav-reviews">
                     Отзывы
                   </button>
                 </li>
                 <li class="header__nav_item">
                   <button class="header__nav_btn" id="header_nav-prices">
-                    Цены
-                  </button>
-                </li>
-                <li class="header__nav_item">
-                  <button class="header__nav_btn" id="header_nav-specialists">
-                    Специалисты
+                    Стоимость
                   </button>
                 </li>
                 <li class="header__nav_item">
@@ -680,7 +680,7 @@
                             </div>
                             <div class="reviews-main__item">
                                 <div class="main-item">
-                                    <div class="main-item__patient main-item__patient2">
+                                    <div class="main-item__patient patient_2">
                                         <div class="main-item__block1">
                                             <p class="main-item__block1_text1">Отзыв пациента </p>
                                             <p class="main-item__block1_text2">Арамиль В., 52 года</p>
